--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-terra-dapp",
+  "name": "iksoks",
   "author": "Terra Money <core@terra.money>",
   "version": "1.0.0",
   "private": true,
@@ -8,7 +8,7 @@
     "@terra-money/wallet-provider": "^3.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3", 
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
